# scribus

./: .Brewfile  .cvsignore  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  BUILDING  BUILDING_win32.txt  BUILDING_win32_cmake.txt  BUILDING_win32_msvc.txt  CHANGELOG.md  CMakeLists.txt  CMakeLists_Apple.cmake  CMakeLists_Dependencies.cmake  CMakeLists_Directories.cmake  COPYING  ChangeLog  ChangeLogCVS  ChangeLogSVN  ConfigureChecks.cmake  Doxyfile  INSTALL  LINKS  Makefile.am  Makefile.svn  NEWS  PACKAGING  README  README.MacOSX  README.MaxOSX  README.OS2  README.md  README_150Manual  README_github.md  Scribus.app.tgz  Scribus.kdev4  Scribus.pot  Scribus.pro  ScribusDesignerPlugins.pro  TODO  (+35 more)
cmake/modules/: CAIROConfig.cmake  FONTCONFIGConfig.cmake  FREETYPEConfig.cmake  FindFontconfig.cmake  FindGMAGICK.cmake  FindHUNSPELL.cmake  FindHYPHEN.cmake  FindJPEG.cmake  FindJXL.cmake  FindLCMS.cmake  FindLCMS2.cmake  FindLIBPODOFO.cmake  FindOSG.cmake  FindPNG.cmake  FindPOPPLER.cmake  FindQt3.cmake  FindTIFF.cmake  FindZLIB.cmake  Findcairo.cmake  Findhunspell.cmake  Findpoppler.cmae  Findpoppler.cmake  GMAGICKConfig.cmake  LCMSConfig.cmake  LIBART_LGPLConfig.cmake  LIBXML2Config.cmake  LibXml2Config.cmake  LibraryDebugAndRelease.cmake  Makefile.am  SCRIBUSQTConfig.cmake  ScribusFindPackageHandleStandardArgs.cmake  ScribusIngestOSXBundleLibraries.cmake  cmakeconfigreport.cmake  getsvn.cmake  oldFindQt3.cmake
resources/dicts/: CMakeLists.txt  README_ca_ES.txt  README_cs_CZ.txt  README_de_1901.txt  README_de_DE.txt  README_hu_HU.txt  README_hyph_de_AT.txt  README_hyph_ia.txt  README_hyph_ml_IN.txt  README_hyph_nb_NO.txt  README_id_ID.txt  README_ku.txt  README_sk_SK.txt  README_uk_UA.txt  hyph_af.dic  hyph_de_1901.dic  hyph_eo.dic  hyph_es.dic  hyph_fi.dic  hyph_gl.dic  hyph_ia.dic  hyph_is.dic  hyph_ku.dic  hyph_ml_IN.dic  hyph_ro.dic  hyph_sk.dic  hyph_sv.dic  hyphen_readme  install.targets
resources/icons/: CMakeLists.txt  install.targets
resources/iconsets/: CMakeLists.txt  install.targets
resources/swatches/: AFNOR_X_08-002.xml  AS_2007S-1996.xml  All_Color_Kit.xml  Alligator Collection 3000_bs00_3.eps  Alligator Collection 3000_bs01_3.eps  Alligator Collection 3000_kd01_4.eps  Alligator Collection 3000_np01_4.eps  Alligator Collection 3000_zd01_4.eps  Alligator Collection 4000_bs00_3.eps  Alligator Collection 4000_bs01_3.eps  Alligator Collection 4000_kd01_4.eps  Alligator Collection 4000_np01_4.eps  Alligator Collection 4000_zd01_4.eps  Android_TM.xml  BS_381C.xml  BS_4800.xml  BannerRite_bs00_3.eps  BannerRite_bs01_3.eps  BannerRite_kd01_4.eps  BannerRite_np01_4.eps  BannerRite_zd01_4.eps  Baumann System Prase_bs00_3.eps  Baumann System Prase_bs01_3.eps  Baumann System Prase_kd01_4.eps  Baumann System Prase_np01_4.eps  Baumann System Prase_zd01_4.eps  Bundesregierung_CMYK.xml  Bundesregierung_CMYK_TZ.xml  Bundesregierung_HKS.xml  CIE-HLC.sbz  CIE-HLC_CMYK.xml  CIE-HLC_RGB.xml  CIE-LAB.sbz  CIE-LAB_CMYK.xml  CIE-LAB_RGB.xml  CMakeLists.txt  COPYING_RESENE.txt  Classic_Kit.xml  ColorBrewer.xml  Colortrend Wood Stains_bs00_3.eps  (+196 more)
resources/templates/: CMakeLists.txt  install.targets  template.ca.xml  template.de.xml  template.es.xml  template.hr.xml  template.hu.xml  template.it.xml  template.xml
resources/translations/: CMakeLists.txt  README  scribus.af.ts  scribus.ar.ts  scribus.az.ts  scribus.be.ts  scribus.bg.ts  scribus.bg_BG.po  scribus.bn.po  scribus.bn_IN.ts  scribus.br.ts  scribus.ca.ts  scribus.cs_CZ.ts  scribus.cy.ts  scribus.da_DK.ts  scribus.de.ts  scribus.de_1901.ts  scribus.de_CH.ts  scribus.el.ts  scribus.en_AU.ts  scribus.en_GB.ts  scribus.en_US.ts  scribus.eo.po  scribus.eo.ts  scribus.es_AR.ts  scribus.es_ES.ts  scribus.et.ts  scribus.eu.ts  scribus.fa_IR.ts  scribus.fi.ts  scribus.fr.ts  scribus.gl.ts  scribus.he_IL.ts  scribus.hi_IN.ts  scribus.hr_HR.ts  scribus.hu.ts  scribus.id.ts  scribus.it.ts  scribus.ja.ts  scribus.kab.ts  (+34 more)
scribus/: .cvsignore  .directory  CMakeLists.txt  CMakeLists_Sources.txt  ISOenc.txt  KarbonCurveFit.cpp  KarbonCurveFit.h  LoremIpsum-short.txt  LoremIpsum.txt  Makefile.am  Stdenc.txt  TTFenc.txt  about.cpp  about.h  aboutplugins.cpp  aboutplugins.h  aboutplugins.ui  aboutpluginsbase.ui  actionmanager.cpp  actionmanager.h  actionsearch.cpp  actionsearch.h  adjustcmsdialog.cpp  align.cpp  align.h  aligndistribute.cpp  aligndistribute.h  aligndistribute.ui  aligndistributebase.ui  alignselect.cpp  alignselect.h  annot.cpp  annot.h  annota.cpp  annota.h  annotation.cpp  annotation.h  applytemplate.cpp  applytemplate.h  applytemplatedialog.cpp  (+1073 more)
scribus/api/: CMakeLists.txt  api_application.cpp  api_application.h  api_color.cpp  api_color.h
scribus/colormgmt/: CMakeLists.txt  scciedata.cpp  scciedata.h  sccieilluminants.cpp  sccieilluminants.h  sccieobservers.cpp  sccieobservers.h  sccolormgmtelem.h  sccolormgmtengine.cpp  sccolormgmtengine.h  sccolormgmtenginedata.cpp  sccolormgmtenginedata.h  sccolormgmtenginefactory.cpp  sccolormgmtenginefactory.h  sccolormgmtimplelem.cpp  sccolormgmtimplelem.h  sccolormgmtstructs.cpp  sccolormgmtstructs.h  sccolorprofile.cpp  sccolorprofile.h  sccolorprofilecache.cpp  sccolorprofilecache.h  sccolorprofiledata.cpp  sccolorprofiledata.h  sccolorspace.cpp  sccolorspace.h  sccolorspacedata.cpp  sccolorspacedata.h  sccolorspacedata_cmyk.h  sccolorspacedata_cmyka.h  sccolorspacedata_gray.h  sccolorspacedata_laba.h  sccolorspacedata_labdbl.h  sccolorspacedata_rgb.h  sccolorspacedata_rgba.h  sccolortransform.cpp  sccolortransform.h  sccolortransformdata.h  sccolortransformpool.cpp  sccolortransformpool.h  (+16 more)
scribus/colormngt/: CMakeLists.txt  sccolormngtelem.h  sccolormngtengine.cpp  sccolormngtengine.h  sccolormngtenginedata.h  sccolormngtenginefactory.cpp  sccolormngtenginefactory.h  sccolormngtimplelem.cpp  sccolormngtimplelem.h  sccolormngtstructs.cpp  sccolormngtstructs.h  sccolorprofile.cpp  sccolorprofile.h  sccolorprofilecache.cpp  sccolorprofilecache.h  sccolorprofiledata.h  sccolortransform.cpp  sccolortransform.h  sccolortransformdata.h  sccolortransformpool.cpp  sccolortransformpool.h  (+6 more)
(+5961 files in other folders)
